@startuml
class DBHelper {
    - String DATABASE_NAME
    - int DATABASE_VERSION
    - String TABLE_NAME
    - SQLiteDatabase db
    - Context context
    + getReadableDatabase() SQLiteDatabase
    + getWritableDatabase() SQLiteDatabase
    + registerUser(username: String, password: String): boolean
    + loginUserByUsername(username: String, password: String): boolean
    + updateIntColumn(playerId: int, column: Column, newValue: int): boolean
    + readAllData(): Cursor
}

class NetworkReceiver {
    - Game game
    - Game.GameState prev
    + onReceive(context: Context, intent: Intent)
}

class Game {
    - SurfaceHolder holder
    + getCurrentGameState(): GameState
    + setCurrentGameState(state: GameState)
    + startGameLoop()
    + touchEvent(event: MotionEvent): boolean
}

class GamePanel {
    - NetworkReceiver networkReceiver
    - Game game
    + surfaceCreated(holder: SurfaceHolder)
    + surfaceChanged(holder: SurfaceHolder, format: int, width: int, height: int)
    + surfaceDestroyed(holder: SurfaceHolder)
    + onTouchEvent(event: MotionEvent): boolean
}

class MPHelper {
    - MediaPlayer mPlayer
    - MediaPlayer EffectPlayer
    - float leftVolume
    - float rightVolume
    + initializeMediaPlayerAsync(callback: MediaPlayerReadyCallback)
    + play()
    + stop()
    + playNextSong()
    + playPreviousSong()
}

MainActivity -->  DBHelper: Initialized the player
MainActivity -->  MPHelper: Initialized sound
MainActivity -->  GameActivity:Game Flow
DBHelper -->  GameActivity: initialize
GameActivity -->  GamePanel: Creates and manages the game
GamePanel -->  NetworkReceiver: Checks network state
GamePanel --> Game : Game Flow
MPHelper --> GameActivity : Manages Media Playback
@enduml